More fixes for paths.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <div id="header-zone">
     <div class="container">
       <div class="col-md-12">
-        <img id="header-image" src="{{site.baseurl}}assets/mach1.png" class="img-responsive center-block" alt="1969 Mach 1 Mustang">
+        <img id="header-image" src="{{site.baseurl}}/assets/mach1.png" class="img-responsive center-block" alt="1969 Mach 1 Mustang">
       </div>
     </div>
     </div>
