Rewrote front-page text.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 
     <!-- Content -->
     <div class="container">
-      <div class="col-sm-12">
+      <div id="content" class="col-sm-12">
         {{content}}
       </div>
     </div>
