Add .table to all tables.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body onLoad="navoffset_func()">
+  <body onLoad="onload_f()">
 
     <!-- Header -->
     <div id="header-zone">
@@ -76,6 +76,15 @@
       $('#nav').affix({
         offset: { top: $('#nav').offset().top }
       });
+    }
+
+    function tableify() {
+      $("table").addClass("table");
+    }
+
+    function onload_f() {
+      tableify();
+      navoffset_func();
     }
     </script>
   </body>
