--- a/css/custom.css
+++ b/css/custom.css
@@ -35,6 +35,9 @@
 }
 
 
-body {
-  text-decoration: 300;
-}
+body { font-weight: 300; }
+h1   { font-weight: 300; }
+h2   { font-weight: 300; }
+h3   { font-weight: 300; }
+h4   { font-weight: 300; }
+h5   { font-weight: 300; }
